# white

./: CMakeLists.txt  readme.md
src/: color.hpp  main.cpp  white.cpp  white.hpp  white_bar.cpp  white_tile.cpp
